tests/expectations/compiler/slice/slice_out_of_bounds_fail.out
Error [ETYC0372177]: Slice range [5..10] is out of bounds for array of length `8`.
    --> compiler-test:5:16
     |
   5 |         return a[5..10];
     |                ^^^^^^^^
